--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,23 @@
 .content {
   display: flex;
+  background-color: rgb(239, 243, 246);
+
+  &__container {
+    overflow: auto;
+    width: 100%;
+  }
+
+  &__central {
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+  }
+}
+
+.main {
+  overflow: auto;
+  display: flex;
+  max-width: 1230px;
 }
