--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,11 +7,13 @@
 
   border-bottom: 2px solid rgb(230, 233, 236);
   border-left: 2px solid rgb(230, 233, 236);
+  border-bottom-left-radius: 5px;
+  background-color: white;
 
   &__title {
     margin-left: 30px;
 
-    font-size: 30px;
+    font-size: 20px;
   }
 
   &__user {
