--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -73,3 +73,11 @@
     transition: 300ms;
   }
 }
+
+@media (max-width: 1024px) {
+  .header {
+    max-width: 660px;
+    border: 2px solid rgb(230, 233, 236);
+    border-radius: 5px;
+  }
+}
