--- a/src/App.scss
+++ b/src/App.scss
@@ -21,3 +21,15 @@
   display: flex;
   max-width: 1230px;
 }
+
+@media (max-width: 1024px) {
+  .main {
+    overflow: visible;
+    max-width: 1024px;
+    &__content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+}
