--- a/src/App.scss
+++ b/src/App.scss
@@ -17,19 +17,28 @@
 }
 
 .main {
+  margin: 0 auto;
   overflow: auto;
   display: flex;
   max-width: 1230px;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 760px) {
   .main {
-    overflow: visible;
-    max-width: 1024px;
     &__content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      margin-left: 50px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .main {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+
+    &__content {
+      margin-left: 50px;
     }
   }
 }
