--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -74,10 +74,10 @@
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 760px){
   .header {
-    max-width: 660px;
-    border: 2px solid rgb(230, 233, 236);
-    border-radius: 5px;
+    width: 93%;
+    margin-left: 50px;
   }
 }
+
