--- a/src/components/Menu/Friends/Friends.scss
+++ b/src/components/Menu/Friends/Friends.scss
@@ -1,6 +1,4 @@
 .friends {
-  width: 250px;
-
   background-color: rgb(34, 44, 60);
 
   &__title {
@@ -18,8 +16,7 @@
   &__info {
     display: flex;
     flex-direction: column;
-    width: 250px;
-    height: 55vh;
+    height: 57vh;
 
     margin-top: 10px;
 
@@ -89,8 +86,14 @@
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1023px) {
   .friends {
     display: none;
   }
 }
+
+// width: 200px;
+
+// &__messages {
+//   margin-left: 30px;
+// }
